@@ -31,7 +31,7 @@
     <glob pattern="*.sig"/>
   </mime-type>
   
-  <mime-type type="application/ssh-key">
+  <mime-type type="application/x-ssh-key">
     <magic priority="90">
       <match type="string" value="ssh-dss " offset="0"/>
       <match type="string" value="ssh-rsa " offset="0"/>
