@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 _Name=Decrypt File
-MimeType=application/pgp-encrypted;application/pgp;
+MimeType=application/pgp-encrypted;
 Exec=seahorse-tool --decrypt
 Type=Application
 Terminal=false
