@@ -1,3 +1,11 @@
+2006-08-30  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * src/seahorse-pgp-encrypted.desktop.in: Remove unused 
+    application/pgp mime type
+    * libseahorse/seahorse-util.c:
+    * plugins/nautilus/seahorse.xml: Make SSH key mime type 
+    application/x-ssh-key
+    
 2006-08-28  Nate Nielsen  <nielsen@memberwebs.com>
 
     * libseahorse/seahorse-ssh-source.c: Fix uninitialized variable
